Adjusted scrollbar style to no longer show buttons except on main section

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,7 +26,7 @@ body{
 *::-webkit-scrollbar {
     width: 8px;
 } 
-  *::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
       background-color: #2585b0;
 } /* the new scrollbar will have a flat appearance with the set background color */
  
@@ -36,7 +36,7 @@ body{
  
 *::-webkit-scrollbar-button {
       background-color: #2585b0;
-      height:28px;
+      height:0px;
 } /* optionally, you can style the top and the bottom buttons (left and right for horizontal bars) */
 
 h2 {
@@ -102,6 +102,10 @@ i{
 }
 
 #main{
+  &::-webkit-scrollbar-button:vertical:decrement {
+    height:28px;
+  }
+  
   height: calc(100% - 136px);
   padding-bottom:5px;
   overflow-y: auto;
